@@ -1,3 +1,8 @@
+2022-11-28 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
+
+	* lib/bootstrap.mk: move the Windows executables to the bin directory
+	  so they can be installed properly
+
 2022-09-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* lib/doc-archive.mk:
